feat(new feature): j15 - text block